# openbb-optimization

./: .gitignore  README.md  notebook.ipynb  pyproject.toml
notebooks/: testing.ipynb
openbb_optimization/: __init__.py  aggregator.py  openbb.py  provider.py  router.py
openbb_optimization/features/: mean_variance.py
openbb_optimization/models/: optimizer_query_params.py  optimizer_result.py
openbb_optimization/utils/: helpers.py
