[tool.poetry]
name = "openbb-optimization"
version = "0.0.1"
description = ""
authors = ["Christian Pellicci <cjpellicci@gmail.com>"]
readme = "README.md"
packages = [{ include = "openbb_optimization" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openbb-core = { version = "^1.1.2" }
pyportfolioopt = ">=1.5,<2.0"

[tool.poetry.group.dev.dependencies]
openbb-devtools = { version = "^1.0.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
openbb_optimization = "openbb_optimization.router:router"

# [tool.poetry.plugins."openbb_provider_extension"]
# openbb_optimization = "openbb_optimization.provider:provider"
